# oxide

./: .gitignore  Cargo.toml  README.md  docker-compose.yml  example.env
src/: main.rs
src/commands/: mod.rs
src/commands/events/: client_join.rs  client_leave.rs  mod.rs  ready.rs  vc.rs
src/commands/slash/: craetevc.rs  mod.rs  ping.rs  setjoin.rs  setleave.rs  sudotest.rs
src/database/: mod.rs  models.rs  mongox.rs
src/handler/: handler.rs
src/imgchacker/: chack.rs  mod.rs
