[package]
name = "oxide"
version = "0.1.0"
edition = "2021"
authers=["Ax"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
poise = "0.5.2"
dotenv = "0.15.0"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
url = "2.3.1"
[dependencies.serenity]
default-features = false
features = ["client", "gateway", "rustls_backend", "model"]
version = "0.11"
[dependencies.mongodb]
version = "2.2.0"
default-features = false
features = ["async-std-runtime"] 